finished related work

--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -94,6 +94,15 @@
 \bibitem{know-dist}
     Hinton G., Vinyals O., Dean J. Distilling the knowledge in a neural network //arXiv preprint arXiv:1503.02531. – 2015.
     
+\bibitem{albert}
+    Lan Z. et al. Albert: A lite bert for self-supervised learning of language representations //arXiv preprint arXiv:1909.11942. – 2019.
+    
+\bibitem{elmo}
+    Peters M. E. et al. Deep contextualized word representations //arXiv preprint arXiv:1802.05365. – 2018.
+    
+\bibitem{flair}
+    Akbik A. et al. FLAIR: An easy-to-use framework for state-of-the-art NLP //Proceedings of the 2019 Conference of the North American Chapter of the Association for Computational Linguistics (Demonstrations). – 2019. – С. 54-59.
+    
 
 \end{thebibliography}
 \endgroup
