--- a/inc/1-literature.tex
+++ b/inc/1-literature.tex
@@ -111,12 +111,19 @@
 Альтернативой данной функции ошибок может служить косинусное расстояние между векторами: $$cosine~distance=\cos(\theta )={A\cdot B \over \|A\|\|B\|}={\frac  {\sum \limits _{{i=1}}^{{n}}{A_{i}\times B_{i}}}{{\sqrt  {\sum \limits _{{i=1}}^{{n}}{(A_{i})^{2}}}}\times {\sqrt  {\sum \limits _{{i=1}}^{{n}}{(B_{i})^{2}}}}}}$$ Где A и B - выходные векторы модели-учителя и модели-студента соответственно.
 Авторы статьи провели такую дистилляцию на максимально-близком к оригиналу датасете(тексты статей из Википедии + тексты книг из Toronto BookCorpus). В результате была получена модель DistilBERT, которая ожидаемо отстает в качестве предсказаний на конечных задачах из датасета GLUE Benchmark - в среднем на 3\%, однако имеет значительно меньше параметров чем оригинальный BERT - 66 миллионов против 110. Так же авторы отмечают меньшее время работы модели.
 
+\par Иной подход к оптимизации BERT-моделей описан в статье~\cite{albert}. Исследователи адресуют проблему увеличения размера моделей с улучшением качества их предсказаний. И предлагают несколько вариантов к оптимизации архитектуры BERT, выраженных в новой архитектуре ALBERT:
 \begin{itemize}
-    \item Добавить про ALBERT и квантизацию
-    \item Добавить про Elmo и Flair
+    \item Факторизация матрицы эмбеддингов(отображения токенов в внутреннее векторное пространство). Предпосылкой данной оптимизации является то, что относительно большая часть параметров языковых моделей приходится именно на матрицы эмбеддингов, ведь они имеют размер $V \times H$, где V - размер словаря и H - размер внутреннего векторного пространства. В случае классического варианта BERT такая матрица имеет $30522 \times 768 = 23440896$ параметров. Авторы ALBERT факторизуют матрицу эмбеддингов в две матрицы размеров $V \times E$ и $E \times H$, где E - промежуточный размер пространства эмбеддингов. Это позволяет снизить количество параметров эмбеддинга до $30000 \times 128 + 128 \times 768 = 3938304$ без ущерба для качества предсказаний.
+    \item Использование общих парметров для слоев Transformer. Иными словами это значит, что вместо 12 отдельных слоев с отдельными параметрами создается один слой и применяется в графе 12 раз. Авторы показывают, что в общем случае в BERT слои обучаются аппроксимировать примерно одни и те же функции, поэтому можно явным образом заменить их на один слой.
+    \item Задача предсказания порядка предложений. В отличии от авторов RoBERTa, в данном случае исследователи решили не отказываться от дополнительной задачи для предобучений, однако они модифицировали её тем, что генерировали отрицательные примеры не путем равномерно-случайно выбора предложений из текста, а путем перестановки местами преложений из положительного примера. Это позволяет сформулировать более сложную для модели задачу, что в свою очередь положительно сказывается на конечных метриках и на сходимости в процессе предтренировки.
 \end{itemize}
 
-%%--
-%\addimg{full_virt}{0.35}{Архитектура полной виртуализации}{full-virt}
+Более подробно о этих и иных подходах к оптимизации моделей будет оговорено в разделе 3.
+
+\subsection{Современные реккурентные модели}
+Несмотря на повсеместное смещение тренда в сторону моделей на основе архитектуры трансформера, реккурентные модели всё ещё используются во многих сферах и показывают отличные результаты на многих задачах.
+\par Одной из самых значительных работ в сфере реккурентных моделей для обработки естественного языка является статья о архитектуре ELMo~\cite{elmo}. Данная модель может использоваться для переноса обучения, пусть и в отличной от BERT схеме. Как правило, лучшие результаты дает дообучение только перцептрона, которые анализирует выходные вектора ELMo, при этом её параметры не изменяются. По аналогии с моделями на основе трансформера, ELMo предобучается на вариации задачи языкового моделирования - а именно на задаче двунаправленного языкового моделирования. Из особенностей архитектуры стоит выделить символьные эмбеддинги, что позволяет избавиться от неизвестных слов, поскольку модель анализирует последовательности символов. Реккурентным слоем является двунаправленный LSTM-блок. Преимуществом данной модели перед Трансформером является небольшой развер - 40 миллионов параметров. К тому же, несмотря на то что практически во всех задачах ELMo уже не показывает самые лучшие результаты - модель всё ещё остается в топ 5-10 лучших.
+
+\par Ещё нельзя обойтись без упоминания статьи о фреймворке Flair~\cite{flair}. Это фреймворк для анализа текста на естественном языке, основой которого является символьная языковая модель, используемая для переноса обучения на ряд задач. Данная языковая модель, аналогично ELMo, использует двунаправленный слой LSTM в качестве основного, однако модель предобучается на классической задаче языкового моделирования. К текущему моменту, подход с использованием такой языковой модели уже уступил ведущие позиции моделям на основе Трансформера, но открытый исходный код и подробная документация с примерами сделала данный фреймворк популярным выбором для решения задач анализа текста на естественном языке.
 
 \clearpage
